--- a/homePage.html
+++ b/homePage.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title> head vs head </title>
+		<title> the English game</title>
 		<link href="cssProject.css" rel="stylesheet" type="text/css" />
 	</head>
 
