--- a/endPageTye.html
+++ b/endPageTye.html
@@ -1,13 +1,14 @@
 <html>
 	<head>
-		<title> head vs head </title>
+		<title> the English game </title>
+		<link href="cssWinPage.css" rel="stylesheet" type="text/css" />
 	</head>
 
 
 	<body>
 		<header>
-			<h1> game over its a tye</h1>
-			
+			<h1>you won!!!!</h1>
+			<h2> you are the best!</h2>
 		</header>
 		
 	</body>
