--- a/homePage.html
+++ b/homePage.html
@@ -1,21 +1,21 @@
 <html>
 	<head>
-		<title> the English game</title>
+		<title> The English game</title>
 		<link href="cssProject.css" rel="stylesheet" type="text/css" />
 	</head>
 
 
 	<body>
 		<header>
-			<h1><sup><i>head</i></sup> <sub><b>&nbsp;vs</b></sub> <sup><i>&nbsp; head</i></sup></h1>
+			<h1><sup><i>THE</i></sup> <sub><b>&nbsp;English</b></sub> <sup><i>&nbsp; GAME</i></sup></h1>
 		</header>
 		
 		<nav>
-			press <a href= "gamePage.html">here</a> to start
+			Press <a href= "gamePage.html">here</a> to start
 		</nav>
 		
 		<section>
-			<h2> the best game ever! </h2>
+			<h2> The best game ever! </h2>
 		</section>
 		
 		<article>
