--- a/gamePage.html
+++ b/gamePage.html
@@ -1,13 +1,13 @@
 <html>
 	<head>
-		<title>  the English game </title>
+		<title>  The English game </title>
 		<link href="cssGamePage.css" rel="stylesheet" type="text/css" />
 	</head>
 
 
 	<body>
 		<header>
-			<h1> tell your enswer here</h1>
+			<h1> Write your answer here</h1>
 			
 		</header>
 		<form id="form1" action="calculate-next" method="get">
