--- a/endPageTye.html
+++ b/endPageTye.html
@@ -1,14 +1,14 @@
 <html>
 	<head>
-		<title> the English game </title>
+		<title> The English game </title>
 		<link href="cssWinPage.css" rel="stylesheet" type="text/css" />
 	</head>
 
 
 	<body>
 		<header>
-			<h1>you won!!!!</h1>
-			<h2> you are the best!</h2>
+			<h1>You won!!!! :)</h1>
+			<h2> You are the best!</h2>
 		</header>
 		
 	</body>
