--- a/losingPage.html
+++ b/losingPage.html
@@ -1,14 +1,14 @@
 <html>
 	<head>
-		<title> the English game </title>
+		<title> The English game </title>
 		<link href="cssWinPage.css" rel="stylesheet" type="text/css" />
 	</head>
 
 
 	<body>
 		<header>
-			<h1>you lost :(</h1>
-			<h2> good luck next time</h2>
+			<h1>You lost :(</h1>
+			<h2> Good luck next time</h2>
 		</header>
 		
 	</body>
