--- a/homePage.html
+++ b/homePage.html
@@ -19,7 +19,7 @@
 		</section>
 		
 		<article>
-			<h3> עלייך ללחוץ על כפתור ההתחלה (כתוב במסך) לאחר שתכנס המערכת תחכה לעוד מתמודד וכאשר יהיו 2 משתמשים המשחק יתחיל. המשחק יהיה כך: אתם תקבלו נושא ואתם צריכים לכתוב דברים שנכנסים לנושא הזה (לדוגמה: אם תקבלו את הנושא מזלות לכתוב מזלות שקיימים) באנגלית, המשחק הוא על זמן אם אתם לא תצליחו לחשוב על מילה שלא נאמרה לפני במסגרת הזמן שנשאר תפסלו והשחקן השני ינצח, אם יגמרו המילים המתאימות המשחק יעצר ויהיה תיקו. </h3>
+			<h2>!חשוב: כל התשובות באותיות קטנות, תשובה נכונה באותיות גדולות לא תתקבל! </h2>
 		</article>
 		
 	</body>
